# magic-combat

./: .flake8  .gitignore  .isort.cfg  .pylintrc  AGENTS.md  LICENSE  README.md  combat.py  comprehensive_rules.py  download_cards.py  fetch_cards.py  mypy.ini  pyproject.toml  pyrightconfig.json  requirements.txt  style guide.md  style_guide.md
llms/: __init__.py  create_llm_prompt.py  llm.py  llm_cache.py
magic_combat/: __init__.py  abilities.py  block_utils.py  blocking_ai.py  combat_utils.py  constants.py  create_llm_prompt.py  creature.py  damage.py  dataset.py  exceptions.py  gamestate.py  keywords.py  limits.py  llm_cache.py  parsing.py  random_creature.py  random_scenario.py  random_setup.py  rules_text.py  scoring.py  scryfall_loader.py  simulator.py  snapshot.py  text_utils.py  utils.py
scripts/: README.md  call_grok.py  create_dataset.py  download_cards.py  evaluate_llm_accuracy.py  evaluate_random_combat_scenarios.py  experiment_with_simple_ai.py  generate_blocking_snapshots.py  investigate_scenario.py  leaderboard.py  random_combat.py  random_scenarios.py  remove_model_from_cache.py
tests/: conftest.py  example_test_cards.json  test_additional.py  test_advanced_combat.py  test_blocking_keywords.py  test_combat_utils.py  test_consistency.py  test_counters.py  test_creature_validation.py  test_daunt.py  test_edge_interactions.py  test_edgecase_interactions.py  test_exalted.py  test_extra.py  test_extra_features.py  test_game_loss.py  test_horsemanship.py  test_imports.py  test_indestructible.py  test_interactions.py  test_keyword_abilities.py  test_style.py  (+12 more)
(+113 files in other folders)
