[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "magic-combat"
version = "0.1.0"
description = "A small combat simulator for Magic: The Gathering."
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.12"
dependencies = [
    "pytest==7.4.0",
    "requests==2.31.0",
    "numpy>=1.26,<2",
    "openai==1.79.0",
    "anthropic==0.57.1",
    "autoflake==2.1.1",
    "flake8==7.3.0",
    "flake8-import-order==0.19.2",
    "black==23.9.1",
    "isort==5.12.0",
    "pylint==3.2.6",
    "mypy==1.11.2",
    "pyflakes==3.4.0",
    "pycodestyle==2.14.0",
    "typing_extensions==4.13.1",
    "types-requests==2.28.11.17",
    "pyright==1.1.402",
    "pydantic==2.7.1",
    "google-genai==1.24.0",
    "together==1.5.17",
    "xai-sdk==1.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
